--- a/BeeManager/BM_ConsoleUI/BM_ConsoleUI.csproj
+++ b/BeeManager/BM_ConsoleUI/BM_ConsoleUI.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.11" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
   </ItemGroup>
 
