--- a/BeeManager/BM_ConsoleUI.Tests/BM_ConsoleUI.Tests.csproj
+++ b/BeeManager/BM_ConsoleUI.Tests/BM_ConsoleUI.Tests.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BM_ConsoleUI\BM_ConsoleUI.csproj" />
+  </ItemGroup>
+
 </Project>
